--- a/HTML-CSS-3-5/d012/estilo/style.css
+++ b/HTML-CSS-3-5/d012/estilo/style.css
@@ -1,5 +1,15 @@
 @charset "UTF-8";
 
+@import url('https://fonts.googleapis.com/css2?family=Indie+Flower&display=swap');
+
+@import url('https://fonts.googleapis.com/css2?family=Caveat:wght@400;500;600;700&display=swap');
+
+:root{
+    --fonte1: Verdana, Geneva, Tahoma, sans-serif;
+    --fonte-cordel: 'Indie Flower', Arial, Verdana, Helvetica, sans-serif;
+    --fonte-poema: 'Caveat', cursive;
+}
+
 * {
     margin: 0px;
     padding: 0px;
@@ -8,6 +18,7 @@
 html, body{
     min-width: 100vh;
     background-color: darkgray;
+    font-family: var(--fonte1);
 }
 
 header{
@@ -19,6 +30,8 @@ header{
 header > h1{
     padding-top: 30px;
     font-variant: small-caps;
+    font-family: var(--fonte-cordel);
+    font-size: 10vw;
 }
 
 header > p{
@@ -40,6 +53,9 @@ section{
     padding-bottom: 10vh;
     line-height: 2em;
     padding-left: 40px;
+    font-family: var(--fonte-poema);
+    font-size: 1.5em;
+    font-weight: bolder;
 }
 
 section.normal{
@@ -53,7 +69,8 @@ section.imagem{
 }
 
 section.imagem > p{
-    width: 400px;
+    display: inline-block;
+    padding: 10px;
     background-color: rgba(0, 0, 0, 0.164);
 }
 
