finalização do desafio 012

--- a/HTML-CSS-3-5/d012/estilo/style.css
+++ b/HTML-CSS-3-5/d012/estilo/style.css
@@ -58,6 +58,10 @@ section{
     font-weight: bolder;
 }
 
+section > p{
+    padding-bottom: 2em;
+}
+
 section.normal{
     background-color: white;
     color: black;
@@ -66,12 +70,29 @@ section.normal{
 section.imagem{
     background-color: rgb(80, 80, 80);
     color: white;
+    box-shadow: inset 6px 6px 13px 0px rgba(0, 0, 0, 0.705);
+    background-attachment: fixed;
+}
+
+section#img01{
+    background-image: url('../imagens/background001.jpg');
+    background-position: right center;
+    background-size: cover;
+}
+
+section#img02{
+    background-image: url('../imagens/background002.jpg');
+    background-position: right center;
+    background-size: cover;
 }
 
 section.imagem > p{
     display: inline-block;
     padding: 10px;
-    background-color: rgba(0, 0, 0, 0.164);
+    border-radius: 10px;
+    background-color: rgba(0, 0, 0, 0.404);
+    text-shadow: 3px 2px 3px black;
+    box-shadow: 3px 3px 8px black;
 }
 
 footer{
