--- a/HTML-CSS-4-5/ex026/mq004/estilos/media-query.css
+++ b/HTML-CSS-4-5/ex026/mq004/estilos/media-query.css
@@ -3,5 +3,54 @@
 /* all other medias*/
 
 @media print{
-    
+    main h1{
+        font-family: 'Courier New', Courier, monospace;
+        text-shadow: none;
+        color: black;
+    }
+    main{
+        border: 2px solid black;
+    }
+    img#phone{ display: none; }
+    img#tablet{ display: none; }
+    img#print{ display: block; }
+    img#PC{ display: none; }
+    img#TV{ display: none; }
+
+}
+
+@media screen and (min-width: 768px){
+    body{
+        background-image: url(../imagens/back-tablet.jpg);
+    }
+    img#phone{ display: none; }
+    img#tablet{ display: block; }
+    img#print{ display: none; }
+    img#PC{ display: none; }
+    img#TV{ display: none; }
+}
+
+@media screen and (min-width: 992px){
+    body{
+        background-image: url(../imagens/back-pc.jpg);
+    }
+    img#phone{ display: none; }
+    img#tablet{ display: none; }
+    img#print{ display: none; }
+    img#PC{ display: block; }
+    img#TV{ display: none; }
+}
+
+@media screen and (min-width: 1200px){
+    body{
+        background-image: url(../imagens/back-tv.jpg);
+    }
+    main{
+        max-width: 500px;
+    }
+    img#phone{ display: none; }
+    img#tablet{ display: none; }
+    img#print{ display: none; }
+    img#PC{ display: none; }
+    img#TV{ display: block; }
 }
