--- a/HTML-CSS-4-5/ex026/mq005/estilos/style.css
+++ b/HTML-CSS-4-5/ex026/mq005/estilos/style.css
@@ -20,8 +20,22 @@ header > h1{
     text-align: center;
 }
 
-menu{
+span#burg{
+    background-color: gray;
+    color: white;
+    text-align: center;
     display: block;
+    padding: 10px;
+    cursor: pointer;
+}
+
+span#burg:hover{
+    background-color: darkgray;
+    text-shadow: 1px 2px 1px black;
+}
+
+menu{
+    display: none;
 }
 menu > ul{
     list-style-type: none;
